Ensure text remains visible during webfont load

--- a/_sass/_font.scss
+++ b/_sass/_font.scss
@@ -4,6 +4,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Noto Serif'), local('NotoSerif'), url(/assets/fonts/NotoSerif.woff) format('woff');
+  font-display: swap;
 }
 
 /* latin-ext */
@@ -13,6 +14,7 @@
   font-weight: 400;
   src: local('Inconsolata Regular'), local('Inconsolata-Regular'), url(/assets/fonts/Inconsolata-Regular-LatinExt.woff2) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  font-display: swap;
 }
 /* latin */
 @font-face {
@@ -21,6 +23,7 @@
   font-weight: 400;
   src: local('Inconsolata Regular'), local('Inconsolata-Regular'), url(/assets/fonts/Inconsolata-Regular-Latin.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-display: swap;
 }
 /* latin */
 @font-face {
@@ -29,10 +32,12 @@
   font-weight: 400;
   src: local('Lustria'), local('Lustria-Regular'), url(/assets/fonts/Lustria-Regular.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-display: swap;
 }
 
 @font-face {
   font-family: Optima;
   src: url("/assets/fonts/OptimaLTPro-Roman.woff2") format("woff2"),
        url("/assets/fonts/OptimaLTPro-Roman.woff") format("woff");
+  font-display: swap;
 }
